fix sidebar getting cut off

--- a/src/editor/editor.css
+++ b/src/editor/editor.css
@@ -22,8 +22,8 @@
 .editor-sidebar {
   position: absolute;
   inset: 0 auto 0 0;
-  width: min(40rem, 80vw);
-  max-width: min(40rem, 80vw);
+  width: min(40rem, calc(100% - var(--hvy-sidebar-tab-size)));
+  max-width: min(40rem, calc(100% - var(--hvy-sidebar-tab-size)));
   transform: translateX(-100%);
   transition: transform 360ms ease, box-shadow 360ms ease;
   z-index: 20;
@@ -142,8 +142,8 @@
   position: absolute;
   left: 100%;
   top: 1rem;
-  width: 2.9rem;
-  height: 2.9rem;
+  width: var(--hvy-sidebar-tab-size);
+  height: var(--hvy-sidebar-tab-size);
   padding: 0;
   border-radius: 0 10px 10px 0;
   border: 1px solid var(--hvy-border-alt);
